--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,44 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
+      <ion-label>MENU</ion-label>
+
+    <ion-tab-button tab="inicio">
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label>Inicio</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="color-filter-outline"></ion-icon>
+      <ion-label>Estetica</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="calendar-clear-outline"></ion-icon>
+      <ion-label>Consultas</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="basket-outline"></ion-icon>
+      <ion-label>Tienda</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="quienes-somos">
+      <ion-icon name="accessibility-outline"></ion-icon>
+      <ion-label>Quienes Somos</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="contacto">
+      <ion-icon name="mail-unread-outline"></ion-icon>
+      <ion-label>Contacto</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="ubicacion">
+      <ion-icon name="location-outline"></ion-icon>
+      <ion-label>Ubicacion</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
+
+
 
 </ion-tabs>
